# cpp_nn_mnist

./: .gitignore  CMakeLists.txt  main.cpp
include/: matrix.hpp
lib/: matrix.cpp
public/: download_datatset.sh
src/: main.cpp  main_old.cpp  simple_old.cpp
tests/: matrix_init.cpp  matrix_operations.cpp
